# ur-tuft-engine

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  typedoc.json
backend/app/: __init__.py  api.py  config.py  main.py  robot_client.py  ur_generator.py
backend/src/: config.ts  index.ts
backend/src/routes/: boundingBox.ts  calibrate.ts  home.ts  pause.ts  preflight.ts  progress.ts  resume.ts  safeHeight.ts  seek.ts  start.ts  toolStop.ts  toolTest.ts  upload.ts
backend/src/services/: jobStore.ts  progressSocketServer.ts  progressStore.ts  robotClient.ts  urGenerator.ts
backend/tests/: generateURProgram.test.d.ts  generateURProgram.test.d.ts.map  generateURProgram.test.js  generateURProgram.test.js.map  generateURProgram.test.ts  test_ur_generator.py
docs/backend/: index.html  modules.html
docs/backend/assets/: navigation.js  search.js
docs/backend/functions/: routes_upload.default.html  services_robotClient.sendProgramToRobot.html  services_urGenerator.generateURProgram.html
docs/backend/interfaces/: config.AppConfig.html  config.RobotConfig.html  config.ToolpathConfig.html  services_urGenerator.URGenerationOptions.html  services_urGenerator.URGenerationResult.html
docs/backend/modules/: config.html  index.html  (+3 more)
docs/frontend/: index.html  modules.html
frontend/: README.md  index.html  package-lock.json  package.json  typedoc.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
tests/output/: test-1.urscript
(+6 files in other folders)
